// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrival query should return valid id field 1`] = `
Object {
  "data": Object {
    "allBookings": Array [
      Object {
        "arrival": Object {
          "airport": Object {
            "city": "Paris",
            "code": "CDG",
          },
        },
      },
      Object {
        "arrival": Object {
          "airport": Object {
            "city": "Dubai",
            "code": "DXB",
          },
        },
      },
      Object {
        "arrival": Object {
          "airport": Object {
            "city": "Samara",
            "code": "KUF",
          },
        },
      },
    ],
  },
}
`;

exports[`departure query should return valid id field 1`] = `
Object {
  "data": Object {
    "allBookings": Array [
      Object {
        "departure": Object {
          "airport": Object {
            "city": "London",
            "code": "LGW",
          },
        },
      },
      Object {
        "departure": Object {
          "airport": Object {
            "city": "London",
            "code": "STN",
          },
        },
      },
      Object {
        "departure": Object {
          "airport": Object {
            "city": "Prague",
            "code": "PRG",
          },
        },
      },
    ],
  },
}
`;

exports[`flights query should return valid id field 1`] = `
Object {
  "data": Object {
    "allBookings": Array [
      Object {
        "flights": Array [
          Object {
            "arrival": Object {
              "airport": Object {
                "city": "Paris",
                "code": "CDG",
              },
            },
            "departure": Object {
              "airport": Object {
                "city": "London",
                "code": "LGW",
              },
            },
          },
        ],
      },
      Object {
        "flights": Array [
          Object {
            "arrival": Object {
              "airport": Object {
                "city": "Prague",
                "code": "PRG",
              },
            },
            "departure": Object {
              "airport": Object {
                "city": "London",
                "code": "STN",
              },
            },
          },
          Object {
            "arrival": Object {
              "airport": Object {
                "city": "Kiev",
                "code": "KBP",
              },
            },
            "departure": Object {
              "airport": Object {
                "city": "Prague",
                "code": "PRG",
              },
            },
          },
          Object {
            "arrival": Object {
              "airport": Object {
                "city": "Dubai",
                "code": "DXB",
              },
            },
            "departure": Object {
              "airport": Object {
                "city": "Kiev",
                "code": "KBP",
              },
            },
          },
        ],
      },
      Object {
        "flights": Array [
          Object {
            "arrival": Object {
              "airport": Object {
                "city": "Samara",
                "code": "KUF",
              },
            },
            "departure": Object {
              "airport": Object {
                "city": "Prague",
                "code": "PRG",
              },
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`id query should return IDs of bookings 1`] = `
Object {
  "data": Object {
    "allBookings": Array [
      Object {
        "id": "2707251",
      },
      Object {
        "id": "2707229",
      },
      Object {
        "id": "2707224",
      },
    ],
  },
}
`;
